--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Depends:
     stats,
     SummarizedExperiment,
     TENxBrainData,
-    splatter(<= 1.15.0),
+    splatter,
     SharedObject(>= 1.3.15)
 Suggests: 
     testthat,
