--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
-        run: rcmdcheck::rcmdcheck(args = c("--no-manual","--no-build-vignettes", "--ignore-vignettes","--no-vignettes"), error_on = "warning", check_dir = "check")
+        run: 
         shell: Rscript {0}
         
       - uses: docker/build-push-action@v1
